@@ -1,0 +1,14 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+VERSION="@VERSION@"
+REQUIRES="glib"
+CFLAGS="-I${includedir} $CFLAGS"
+LIBS_PATH="-L${libdir} $LIBS_PATH"
+LIBS_LINK_SELF="-lIDL $LIBS_LINK_SELF"
+LIBS_LINK_SYSTEM="$LIBS_LINK_SYSTEM"
+
+#Name: libIDL
+#Description: IDL parsing library
