@@ -1,3 +1,11 @@
+2000-09-30  Martin Baulig  <baulig@suse.de>
+
+	* libIDL.pc.in: Provide pkg-config script.
+
+	* configure.in: Create libIDL.pc from libIDL.pc.in.
+	* Makefile.am (pkgconfig_DATA): Install the libIDL.pc
+	script in `$(libexecdir)/pkgconfig'.
+
 2000-07-14  Michael Meeks  <michael@helixcode.com>
 
 	* parser.y (positive_int_const): incr. ref count.
